put in a bootstrap styled dropdown. it's still a little off, i suspect it might be using the old bootstrap css.

--- a/client/retrospectThat.html
+++ b/client/retrospectThat.html
@@ -4,14 +4,19 @@
 
 <body>
 	<h1>Retrospect That</h1>
-	Select you quad area:
-	<select>
-		<option value="0">Select Quad Area</option>
+	Select your quad area:
+	<div class="dropdown">
+		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+	    Select Quad Area
+	    <span class="caret"></span>
+	  </button>
 
-		<option value="4">4-quad</option>
-		<option value="6">6-quad</option>
-		<option value="8">8-quad</option>
-	</select>
+	  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="4">4-quad</a></li>
+	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="6">6-quad</a></li>
+	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="9">9-quad</a></li>
+	  </ul>
+	</div>
 	
 	<form>
 		<div>
