--- a/client/retrospectThat.html
+++ b/client/retrospectThat.html
@@ -5,18 +5,7 @@
 <body>
 	<h1>Retrospect That</h1>
 	Select your quad area:
-	<div class="dropdown">
-		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-	    Select Quad Area
-	    <span class="caret"></span>
-	  </button>
-
-	  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="4">4-quad</a></li>
-	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="6">6-quad</a></li>
-	    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" value="9">9-quad</a></li>
-	  </ul>
-	</div>
+	{{> dropdown}}
 	
 	<form>
 		<div>
