restructure some stuff

--- a/client/quad/quad.html
+++ b/client/quad/quad.html
@@ -1,7 +1,7 @@
 <template name="quad">
 	<div class="quad">
 		<div class="input-group">
-		  <input type="text" class="form-control" placeholder="Name your quadrant" aria-describedby="basic-addon2">
+		  <input type="text" class="quadName form-control" placeholder="Name your quadrant" aria-describedby="basic-addon2">
 		</div>
 	</div>
 </template>
