--- a/client/retrospectThat.html
+++ b/client/retrospectThat.html
@@ -3,18 +3,7 @@
 </head>
 
 <body>
-	<h1>Retrospect That</h1>
-	Select your quad area:
-	{{> dropdown}}
-	
-	<form>
-		<div>
-			{{#each quads}}
-				{{> quad}}
-			{{/each}}
-		</div>
-	</form>
+	{{> gameHeader}}
 
+	{{> newGameBoard}}
 </body>
-
-
