Added fom2js and moved the game submission to the game board

--- a/client/newGameBoard/newGameBoard.html
+++ b/client/newGameBoard/newGameBoard.html
@@ -1,5 +1,10 @@
 <template name="newGameBoard">
 	<form>
+		Select your quad area:
+		{{> dropdown}}
+
+		<input class="btn btn-default" type="submit" value="Start Game">
+		
 		<div>
 			{{#each quads}}
 				{{> quad}}
