Reliable Start Game to RetroIT, cleanup a little

--- a/client/newGameBoard/newGameBoard.html
+++ b/client/newGameBoard/newGameBoard.html
@@ -3,7 +3,7 @@
 		Select your quad area:
 		{{> dropdown}}
 
-		<input class="btn btn-default" type="submit" value="Start Game">
+		<input class="btn btn-default" type="submit" value="RetroIT">
 		
 		<div>
 			{{#each quads}}
