set up data for retroSpectIt route, as well as default route.

--- a/client/newGameBoard/newGameBoard.html
+++ b/client/newGameBoard/newGameBoard.html
@@ -2,14 +2,7 @@
 	<form>
 		Select your quad area:
 		{{> dropdown}}
-
 		<input class="btn btn-default" type="submit" value="RetroIT">
-		
-		<div>
-			{{#each quads}}
-				{{> quad}}
-			{{/each}}
-		</div>
-
+		{{> quadrants}}
 	</form>
 </template>
