reliable quadrants to newGameQuadrants, fix some data business

--- a/client/newGameBoard/newGameBoard.html
+++ b/client/newGameBoard/newGameBoard.html
@@ -3,6 +3,6 @@
 		Select your quad area:
 		{{> dropdown}}
 		<input class="btn btn-default" type="submit" value="RetroIT">
-		{{> quadrants}}
+		{{> newGameQuadrants}}
 	</form>
 </template>
