--- a/client/newGameBoard/newGameQuadrants/newGameQuad/newGameQuad.html
+++ b/client/newGameBoard/newGameQuadrants/newGameQuad/newGameQuad.html
@@ -1,5 +1,5 @@
-<template name="quad">
-	<div class="quad">
+<template name="newGameQuad">
+	<div class="new-game-quad">
 		<div class="input-group">
 		  <input type="text" name="{{quadName}}" class="quadName form-control" placeholder="Name your quadrant" aria-describedby="basic-addon2">
 		</div>
