--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -1,10 +1,8 @@
 <template name="retrospectIt">
-	<div>
+	<div class="board">
 		{{#each boardQuads}}
-			<div class="quad">
-				<div class="input-group">
-				 	<span>{{this}}</span>
-				</div>
+			<div class="quad board-quad">
+				<div class="board-quad-name">{{this}}</div>
 			</div>
 		{{/each}}
 	</div>
