--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -1,10 +1,6 @@
 <template name="retrospectIt">
-	<div class="row">
-	  <div class="col-xs-12 col-md-6">
-		{{> boardQuads}}
-	  </div>
-	  <div class="col-xs-6 col-md-4">
+	  {{> boardQuads}}
+	  <!--  <div class="col-xs-6 col-md-4">
 		{{> actionItems}}
-	  </div>
-	</div>
+	  </div> -->
 </template>
