--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -1,6 +1,19 @@
 <template name="retrospectIt">
-	  {{> boardQuads}}
+	<div class="board container">
+		<div class="row">
+			<div class="col-lg-12">
+				menu
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-8">
+	  			{{> boardQuads}}
+  			</div>
+			<div class="col-lg-4">
+				{{> actionItems}}
+			</div>
+  		</div>
+	</div>
 	  <!--  <div class="col-xs-6 col-md-4">
-		{{> actionItems}}
 	  </div> -->
 </template>
