get mobile views in with bootstrap, hide the action menu for smaller devices

--- a/client/retrospectIt/boardQuads/boardQuads.html
+++ b/client/retrospectIt/boardQuads/boardQuads.html
@@ -2,7 +2,7 @@
 		{{#each gridData}}
 			<div class="row">
 				{{#each this}}
-					<div class="col-lg-6 quad board-quad">
+					<div class="col-xs-12 col-md-6 quad board-quad">
 						<div class="board-quad-name">{{this}}</div>
 					</div>
 				{{/each}}
