--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -6,14 +6,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-8">
+			<div class="col-xs-12 col-md-8">
 	  			{{> boardQuads}}
   			</div>
-			<div class="col-lg-4">
+			<div class="hidden-xs hidden-sm col-md-4">
 				{{> actionItems}}
 			</div>
   		</div>
 	</div>
-	  <!--  <div class="col-xs-6 col-md-4">
-	  </div> -->
+	  
 </template>
