--- a/client/retrospectThat.html
+++ b/client/retrospectThat.html
@@ -1,5 +1,6 @@
 <head>
   <title>retrospectThat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js"> </script>
 </head>
 
