Use interactjs for quads.

--- a/client/retrospectIt/boardQuads/quad/quad.html
+++ b/client/retrospectIt/boardQuads/quad/quad.html
@@ -1,7 +1,8 @@
 <template name="quad">
-<div class="col-xs-12 col-md-6 quad board-quad">
-	<div class="board-quad-name">{{this.label}}
-		<canvas id={{this.id}}> </canvas>
-	</div>
-</div>
+    <div class="col-xs-12 col-md-6 quad board-quad">
+        <div class="board-quad-name">{{this.label}}
+        </div>
+        <div class="cards">
+        </div>
+    </div>
 </template>
