--- a/client/newGameBoard/newGameQuadrants/newGameQuadrants.html
+++ b/client/newGameBoard/newGameQuadrants/newGameQuadrants.html
@@ -1,5 +1,5 @@
 <template name="newGameQuadrants">
-	<div>
+	<div class="new-game-quadrants">
 		{{#each newGameQuads}}
 			{{> newGameQuad}}
 		{{/each}}
