--- a/client/defaultPage.html
+++ b/client/defaultPage.html
@@ -1,5 +1,5 @@
 <head>
-  <title>retrospectThat</title>
+  <title>retrospectIt</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js"> </script>
 </head>
