--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,7 +1,8 @@
 <template name="menu">
-	<div class="row">
-		<div class="col-lg-12">
-			menu
+	<div class="menu row">
+		<div class="buttons col-lg-12">
+			{{> yield "firstButton"}}
+			{{> yield "otherButtons"}}
 		</div>
 	</div>
 </template>
