double tap for mobile to add a card

--- a/client/retrospectIt/boardQuads/quad/quad.html
+++ b/client/retrospectIt/boardQuads/quad/quad.html
@@ -1,5 +1,5 @@
 <template name="quad">
-    <div class="col-xs-12 col-md-6 quad board-quad">
+    <div id="{{this.id}}" class="col-xs-12 col-md-6 quad board-quad">
         <div class="board-quad-name">{{this.label}}
         </div>
         <div class="cards">
