make the template re-render when new cards are moved and added

--- a/client/retrospectIt/boardQuads/quad/quad.html
+++ b/client/retrospectIt/boardQuads/quad/quad.html
@@ -3,6 +3,7 @@
         <div class="board-quad-name">{{this.label}}
         </div>
         <div class="cards">
+        	{{{data}}}
         </div>
     </div>
 </template>
