--- a/client/gameHeader/gameHeader.html
+++ b/client/gameHeader/gameHeader.html
@@ -1,3 +1,3 @@
 <template name="gameHeader">
-	<h1>retrospectIt</h1>
+	<h1>retrospectIt - You are playing the retro game of {{gameid}}</h1>
 </template>
