style up the new game board

--- a/client/newGameBoard/newGameQuadrants/newGameQuad/newGameQuad.html
+++ b/client/newGameBoard/newGameQuadrants/newGameQuad/newGameQuad.html
@@ -1,5 +1,5 @@
 <template name="newGameQuad">
-	<div class="new-game-quad">
+	<div class="new-game-quad col-md-6">
 		<div class="input-group">
 		  <input type="text" name="{{quadName}}" class="quadName form-control" placeholder="Name your quadrant" aria-describedby="basic-addon2">
 		</div>
