--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -1,7 +1,7 @@
 <template name="retrospectIt">
 	
 <div class="row">
-	<div class="col-xs-12 col-md-10">
+	<div class="col-xs-12 col-md-offset-0 col-md-8 col-lg-offset-1 col-lg-7">
 			{{> boardQuads}}
 		</div>
 	<div class="hidden-xs hidden-sm col-md-2">
