Style badge and play pause buttons for timer

--- a/client/menu/timer.html
+++ b/client/menu/timer.html
@@ -1,5 +1,5 @@
 <template name="timer">
-	<button>start</button>
+	<button class="timer btn btn-default glyphicon glyphicon-play"></button>
 	<div class="retro-timer">
 	</div>
 
