add in a reset button for the timer and include font-awesome

--- a/client/menu/timer.html
+++ b/client/menu/timer.html
@@ -1,5 +1,6 @@
 <template name="timer">
-	<button class="timer btn btn-default glyphicon glyphicon-play"></button>
+	<button class="timer btn btn-default fa fa-play"></button>
+	<button class="timer-reset btn btn-default fa fa-undo"></button>
 	<div class="retro-timer">
 	</div>
 
