Styles actions items and created parking lot

--- a/client/actionItems/actionItems.html
+++ b/client/actionItems/actionItems.html
@@ -1,43 +1,32 @@
 <template name="actionItems">
+	<h2 class="text-center">Action Items</h2>
 	<table class="table table-striped">
 	  <thead>
 	  	<tr>
-          <th>Status</th>
+          <th>Complete</th>
           <th>Action Description</th>
           <th>Priority</th>
           <th>Owner</th>
-          <th></th>
         </tr>
 	  </thead>
 	  <tbody>
         <tr>
-          <th></th>
-          <td><input type="text" class="form-control" placeholder="Action Description"></td>
-          <td>
-          	<div class="btn-group">
-			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-			    Priority <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" role="menu">
-			    <li><a href="#">High</a></li>
-			    <li><a href="#">Medium</a></li>
-			    <li><a href="#">Low</a></li>
-			  </ul>
-			</div>
-          </td>
-          <td>JZ</td>
-          <td>
-          	<div class="btn-group">
-			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-			    Action <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" role="menu">
-			    <li><a href="#">Complete</a></li>
-			    <li class="divider"></li>
-			    <li><a href="#">New Item</a></li>
-			  </ul>
-			</div>
-          </td>
+          <th><input type="checkbox"/></th>
+          <td>Need additional whiteboards</td>
+          <td>Low</td>
+          <td>Justin</td>
+        </tr>
+        <tr>
+          <th><input type="checkbox"></th>
+          <td>Hold a 3 PM on GIT rebase onto</td>
+          <td>Medium</td>
+          <td>Cathy and Matt</td>
+        </tr>
+        <tr>
+          <th><input type="checkbox"/></th>
+          <td>Plan team outing</td>
+          <td>Low</td>
+          <td>Keith</td>
         </tr>
        </tbody>
 	</table>
