--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,6 +1,6 @@
 <template name="menu">
 	<div class="menu row">
-		<div class="buttons col-lg-8">
+		<div class="buttons hidden-xs col-lg-8">
 			{{> yield "firstButton"}}
 			{{> yield "otherButtons"}}
 		</div>
