--- a/client/retrospectIt/retrospectIt.html
+++ b/client/retrospectIt/retrospectIt.html
@@ -1,11 +1,16 @@
 <template name="retrospectIt">
 	
 <div class="row">
-	<div class="col-xs-12 col-md-offset-0 col-md-8 col-lg-offset-1 col-lg-7">
-			{{> boardQuads}}
+	<div class="col-xs-12 col-md-offset-0 col-md-6 col-lg-offset-1">
+		{{> boardQuads}}
+	</div>
+	<div class="col-md-3 col-lg-offset-1 hidden-xs">
+		<div class="row">
+			{{> actionItems}}
 		</div>
-	<div class="hidden-xs hidden-sm col-md-2">
-		{{> actionItems}}
+		<div class="row">
+			{{> parkingLot}}
+		</div>
 	</div>
 </div>
   
