move things around

--- a/client/actionItems/actionItems.html
+++ b/client/actionItems/actionItems.html
@@ -28,6 +28,12 @@
           <td>Low</td>
           <td>Keith</td>
         </tr>
+        <tr>
+          <th><input type="checkbox"/></th>
+          <td>Hve  3 PM on CapOne performance improvements</td>
+          <td>High</td>
+          <td>Raj</td>
+        </tr>
        </tbody>
 	</table>
 </template>
