--- a/client/newGameBoard/newGameQuadrants/newGameQuadrants.html
+++ b/client/newGameBoard/newGameQuadrants/newGameQuadrants.html
@@ -2,6 +2,7 @@
 	<div class="new-game-quadrants">
 		{{#each gridData}}
 			<div class="row">
+				<div class="col-lg-1"></div>
 				{{#each this}}
 					{{> newGameQuad}}
 				{{/each}}
